sidebar변경 중, number수정

--- a/Agricola_Front/data/Basic/roundcard.ui
+++ b/Agricola_Front/data/Basic/roundcard.ui
@@ -168,7 +168,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../MyQRC.qrc"/>
+  <include location="../../MyQRC.qrc"/>
  </resources>
  <connections/>
 </ui>
