--- a/Agricola_Front/data/Basic/sidebar.ui
+++ b/Agricola_Front/data/Basic/sidebar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>134</width>
-    <height>540</height>
+    <width>119</width>
+    <height>647</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,14 +18,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>134</width>
-    <height>540</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>134</width>
-    <height>540</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -48,7 +48,7 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,5,1,6,3">
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,4,1,5,3">
      <property name="spacing">
       <number>0</number>
      </property>
@@ -58,7 +58,7 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QLabel" name="label_1_1">
+        <widget class="QLabel" name="lb_player">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
            <horstretch>0</horstretch>
@@ -153,15 +153,18 @@
             <number>-1</number>
            </property>
            <item row="1" column="0">
-            <widget class="QPushButton" name="pushButton_2_cow">
+            <widget class="QPushButton" name="btn_pig">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="styleSheet">
+              <string notr="true">border-image: url(:/newPrefix/images/pig.png);</string>
+             </property>
              <property name="text">
-              <string>소</string>
+              <string/>
              </property>
             </widget>
            </item>
@@ -198,28 +201,35 @@
             </widget>
            </item>
            <item row="0" column="0">
-            <widget class="QPushButton" name="pushButton_2_sheep">
+            <widget class="QPushButton" name="btn_sheep">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="styleSheet">
+              <string notr="true">border-image: url(:/newPrefix/images/sheep.png);
+background-color: rgb(255, 255, 102);</string>
+             </property>
              <property name="text">
-              <string>양</string>
+              <string/>
              </property>
             </widget>
            </item>
            <item row="2" column="0">
-            <widget class="QPushButton" name="pushButton_2_pig">
+            <widget class="QPushButton" name="btn_cow">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="styleSheet">
+              <string notr="true">border-image: url(:/newPrefix/images/cow.png);</string>
+             </property>
              <property name="text">
-              <string>돼지</string>
+              <string/>
              </property>
             </widget>
            </item>
@@ -312,54 +322,66 @@
            <number>-1</number>
           </property>
           <item row="1" column="0">
-           <widget class="QPushButton" name="pushButton_4_cow">
+           <widget class="QPushButton" name="btn_chg_pig">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">border-image: url(:/newPrefix/images/pig.png);</string>
+            </property>
             <property name="text">
-             <string>소</string>
+             <string/>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QPushButton" name="pushButton_4_pig">
+           <widget class="QPushButton" name="btn_chg_cow">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">border-image: url(:/newPrefix/images/cow.png);</string>
+            </property>
             <property name="text">
-             <string>돼지</string>
+             <string/>
             </property>
            </widget>
           </item>
           <item row="3" column="0">
-           <widget class="QPushButton" name="pushButton_4_vet">
+           <widget class="QPushButton" name="btn_chg_vegetable">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">border-image: url(:/newPrefix/images/vegetable.png);</string>
+            </property>
             <property name="text">
-             <string>채소</string>
+             <string/>
             </property>
            </widget>
           </item>
           <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton_4_sheep">
+           <widget class="QPushButton" name="btn_chg_sheep">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">border-image: url(:/newPrefix/images/sheep.png);</string>
+            </property>
             <property name="text">
-             <string>양</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -437,7 +459,7 @@
        <property name="styleSheet">
         <string notr="true">background-color: rgb(186, 187, 255);</string>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_16">
+       <layout class="QVBoxLayout" name="verticalLayout_16" stretch="1,2">
         <property name="spacing">
          <number>0</number>
         </property>
@@ -478,15 +500,18 @@
            <number>-1</number>
           </property>
           <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton_5_grain">
+           <widget class="QPushButton" name="btn_trade_grain">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">border-image: url(:/newPrefix/images/grain.png);</string>
+            </property>
             <property name="text">
-             <string>곡식</string>
+             <string/>
             </property>
             <property name="default">
              <bool>false</bool>
@@ -494,15 +519,18 @@
            </widget>
           </item>
           <item row="1" column="0">
-           <widget class="QPushButton" name="pushButton_5_grain_2">
+           <widget class="QPushButton" name="btn_trade_vegetable">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">border-image: url(:/newPrefix/images/vegetable.png);</string>
+            </property>
             <property name="text">
-             <string>채소</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -547,6 +575,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../MyQRC.qrc"/>
+ </resources>
  <connections/>
 </ui>
