--- a/Agricola_Front/data/Basic/sidebar.ui
+++ b/Agricola_Front/data/Basic/sidebar.ui
@@ -154,6 +154,9 @@
            </property>
            <item row="1" column="0">
             <widget class="QPushButton" name="btn_pig">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -165,6 +168,9 @@
              </property>
              <property name="text">
               <string/>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -203,7 +209,7 @@
            <item row="0" column="0">
             <widget class="QPushButton" name="btn_sheep">
              <property name="enabled">
-              <bool>false</bool>
+              <bool>true</bool>
              </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -218,10 +224,16 @@ QPushButton:disabled {background-color: yellow;}</string>
              <property name="text">
               <string/>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item row="2" column="0">
             <widget class="QPushButton" name="btn_cow">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -233,6 +245,9 @@ QPushButton:disabled {background-color: yellow;}</string>
              </property>
              <property name="text">
               <string/>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
