sidebar비율,유닛 수정

--- a/Agricola_Front/data/Basic/sidebar.ui
+++ b/Agricola_Front/data/Basic/sidebar.ui
@@ -48,7 +48,7 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,4,1,5,3">
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,8,1,5,2">
      <property name="spacing">
       <number>0</number>
      </property>
@@ -133,7 +133,7 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <layout class="QGridLayout" name="gridLayout_5" columnstretch="7,3">
+          <layout class="QGridLayout" name="gridLayout_5" rowstretch="1,1,1,1,1" columnstretch="4,5">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -152,6 +152,32 @@
            <property name="verticalSpacing">
             <number>-1</number>
            </property>
+           <item row="3" column="0">
+            <widget class="QPushButton" name="btn_unit">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">border-image: url(:/newPrefix/images/grain.png);</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QLabel" name="btn_unit_count">
+             <property name="text">
+              <string>x3</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
            <item row="1" column="0">
             <widget class="QPushButton" name="btn_pig">
              <property name="enabled">
@@ -267,6 +293,32 @@ QPushButton:disabled {background-color: yellow;}</string>
              </property>
             </widget>
            </item>
+           <item row="4" column="0">
+            <widget class="QPushButton" name="pushButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">border-image: url(:/newPrefix/images/vegetable.png);</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>x1</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
@@ -275,6 +327,9 @@ QPushButton:disabled {background-color: yellow;}</string>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_3">
+       <property name="spacing">
+        <number>-1</number>
+       </property>
        <item>
         <widget class="QPushButton" name="pushButton_dropanimal">
          <property name="sizePolicy">
@@ -332,7 +387,7 @@ QPushButton:disabled {background-color: yellow;}</string>
          </widget>
         </item>
         <item>
-         <layout class="QGridLayout" name="gridLayout_4_1" columnstretch="7,3">
+         <layout class="QGridLayout" name="gridLayout_4_1" columnstretch="4,5">
           <property name="horizontalSpacing">
            <number>0</number>
           </property>
@@ -510,7 +565,7 @@ QPushButton:disabled {background-color: yellow;}</string>
          </widget>
         </item>
         <item>
-         <layout class="QGridLayout" name="gridLayout_5_1" rowstretch="0,0" columnstretch="7,3">
+         <layout class="QGridLayout" name="gridLayout_5_1" rowstretch="0,0" columnstretch="4,5">
           <property name="horizontalSpacing">
            <number>0</number>
           </property>
