--- a/Agricola_Front/data/Basic/first_card_inform.ui
+++ b/Agricola_Front/data/Basic/first_card_inform.ui
@@ -300,6 +300,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../MyQRC.qrc"/>
+ </resources>
  <connections/>
 </ui>
