--- a/Agricola_Front/data/Basic/mycard_firstcheck.ui
+++ b/Agricola_Front/data/Basic/mycard_firstcheck.ui
@@ -124,10 +124,13 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_1">
          <property name="spacing">
-          <number>-1</number>
+          <number>50</number>
+         </property>
+         <property name="leftMargin">
+          <number>50</number>
          </property>
          <property name="rightMargin">
-          <number>3</number>
+          <number>50</number>
          </property>
          <item>
           <widget class="QWidget" name="widget_job_1" native="true">
@@ -209,8 +212,14 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <property name="spacing">
+          <number>50</number>
+         </property>
+         <property name="leftMargin">
+          <number>50</number>
+         </property>
          <property name="rightMargin">
-          <number>3</number>
+          <number>50</number>
          </property>
          <item>
           <widget class="QWidget" name="widget_sub_1" native="true">
@@ -294,7 +303,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../Documents/GitHub/Agricola-Front_ui-images-py/Agricola_Front/MyQRC.qrc"/>
+  <include location="../../MyQRC.qrc"/>
  </resources>
  <connections/>
 </ui>
