--- a/Agricola_Front/data/mainwindow_v1.ui
+++ b/Agricola_Front/data/mainwindow_v1.ui
@@ -37,7 +37,7 @@
      <number>10</number>
     </property>
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="1,3,1">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,3,0">
       <property name="spacing">
        <number>0</number>
       </property>
@@ -152,7 +152,7 @@
            </font>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="round_page">
            <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1">
@@ -293,32 +293,11 @@
           <widget class="QWidget" name="start_page">
            <property name="styleSheet">
             <string notr="true">#start_page {
-    background-image: url(':/newPrefix/images/agricola.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain; /* or use 'cover' depending on your needs */
+    border-image: url(':/newPrefix/images/agricola.png');
 }
 </string>
            </property>
-           <layout class="QVBoxLayout" name="verticalLayout_5" stretch="4,1">
-            <item>
-             <widget class="QLabel" name="lb_start">
-              <property name="font">
-               <font>
-                <pointsize>30</pointsize>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:white;</string>
-              </property>
-              <property name="text">
-               <string>AGRICOLA</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-            </item>
+           <layout class="QVBoxLayout" name="verticalLayout_5" stretch="1">
             <item>
              <widget class="QPushButton" name="GAMESTART_BUTTON">
               <property name="sizePolicy">
@@ -326,6 +305,9 @@
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
               </property>
               <property name="text">
                <string>시작하기</string>
@@ -335,29 +317,46 @@
            </layout>
           </widget>
           <widget class="QWidget" name="page">
-           <layout class="QHBoxLayout" name="horizontalLayout_10">
+           <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="3,1">
+            <property name="leftMargin">
+             <number>12</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QStackedWidget" name="sw_p0">
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="page_2">
-               <widget class="QPushButton" name="p0_show">
-                <property name="geometry">
-                 <rect>
-                  <x>350</x>
-                  <y>180</y>
-                  <width>351</width>
-                  <height>151</height>
-                 </rect>
-                </property>
-                <property name="text">
-                 <string>카드 확인하기</string>
-                </property>
-               </widget>
+               <layout class="QHBoxLayout" name="horizontalLayout_4">
+                <item>
+                 <widget class="QPushButton" name="p0_show">
+                  <property name="text">
+                   <string>카드 확인하기</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
               <widget class="QWidget" name="p0_card_show">
                <layout class="QHBoxLayout" name="horizontalLayout_12">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
                 <item>
                  <layout class="QHBoxLayout" name="hlo_p0_card">
                   <property name="spacing">
@@ -370,7 +369,7 @@
              </widget>
             </item>
             <item>
-             <layout class="QVBoxLayout" name="verticalLayout_4">
+             <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,0,0,0">
               <item>
                <widget class="QLabel" name="label">
                 <property name="text">
@@ -405,6 +404,12 @@
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>100</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>확인하였습니다.</string>
                 </property>
@@ -415,29 +420,43 @@
            </layout>
           </widget>
           <widget class="QWidget" name="page_4">
-           <layout class="QHBoxLayout" name="horizontalLayout_9">
+           <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="3,1">
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QStackedWidget" name="sw_p1">
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="page_5">
-               <widget class="QPushButton" name="p1_show">
-                <property name="geometry">
-                 <rect>
-                  <x>390</x>
-                  <y>170</y>
-                  <width>351</width>
-                  <height>151</height>
-                 </rect>
-                </property>
-                <property name="text">
-                 <string>카드 확인하기</string>
-                </property>
-               </widget>
+               <layout class="QHBoxLayout" name="horizontalLayout_18">
+                <item>
+                 <widget class="QPushButton" name="p1_show">
+                  <property name="text">
+                   <string>카드 확인하기</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
               <widget class="QWidget" name="p1_card_show">
                <layout class="QHBoxLayout" name="horizontalLayout_13">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
                 <item>
                  <layout class="QHBoxLayout" name="hlo_p1_card">
                   <property name="spacing">
@@ -485,6 +504,12 @@
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>100</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>확인하였습니다.</string>
                 </property>
@@ -495,29 +520,49 @@
            </layout>
           </widget>
           <widget class="QWidget" name="page_7">
-           <layout class="QHBoxLayout" name="horizontalLayout_8">
+           <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="3,1">
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QStackedWidget" name="sw_p2">
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="page_8">
-               <widget class="QPushButton" name="p2_show">
-                <property name="geometry">
-                 <rect>
-                  <x>410</x>
-                  <y>170</y>
-                  <width>351</width>
-                  <height>151</height>
-                 </rect>
-                </property>
-                <property name="text">
-                 <string>카드 확인하기</string>
-                </property>
-               </widget>
+               <layout class="QHBoxLayout" name="horizontalLayout_16">
+                <item>
+                 <widget class="QPushButton" name="p2_show">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>카드 확인하기</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
               <widget class="QWidget" name="p2_card_show">
                <layout class="QHBoxLayout" name="horizontalLayout_14">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
                 <item>
                  <layout class="QHBoxLayout" name="hlo_p2_card">
                   <property name="spacing">
@@ -565,6 +610,12 @@
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>100</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>확인하였습니다.</string>
                 </property>
@@ -575,29 +626,64 @@
            </layout>
           </widget>
           <widget class="QWidget" name="page_10">
-           <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="3,1">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QStackedWidget" name="sw_p3">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="page_11">
-               <widget class="QPushButton" name="p3_show">
-                <property name="geometry">
-                 <rect>
-                  <x>390</x>
-                  <y>170</y>
-                  <width>351</width>
-                  <height>151</height>
-                 </rect>
-                </property>
-                <property name="text">
-                 <string>카드 확인하기</string>
-                </property>
-               </widget>
+               <layout class="QHBoxLayout" name="horizontalLayout_17">
+                <item>
+                 <widget class="QPushButton" name="p3_show">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="minimumSize">
+                   <size>
+                    <width>300</width>
+                    <height>300</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>카드 확인하기</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
               <widget class="QWidget" name="p3_card_show">
                <layout class="QHBoxLayout" name="horizontalLayout_15">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
                 <item>
                  <layout class="QHBoxLayout" name="hlo_p3_card">
                   <property name="spacing">
@@ -644,6 +730,12 @@
                <widget class="QPushButton" name="card_check_p3">
                 <property name="enabled">
                  <bool>false</bool>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>100</height>
+                 </size>
                 </property>
                 <property name="text">
                  <string>확인하였습니다.</string>
