--- a/Agricola_Front/MyQRC.qrc
+++ b/Agricola_Front/MyQRC.qrc
@@ -1,5 +1,35 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>images/보조 설비/보조설비0.png</file>
+    <file>images/보조 설비/보조설비1.png</file>
+    <file>images/보조 설비/보조설비2.png</file>
+    <file>images/보조 설비/보조설비3.png</file>
+    <file>images/보조 설비/보조설비4.png</file>
+    <file>images/보조 설비/보조설비5.png</file>
+    <file>images/보조 설비/보조설비6.png</file>
+    <file>images/보조 설비/보조설비7.png</file>
+    <file>images/보조 설비/보조설비8.png</file>
+    <file>images/보조 설비/보조설비9.png</file>
+    <file>images/보조 설비/보조설비10.png</file>
+    <file>images/보조 설비/보조설비11.png</file>
+    <file>images/주요 설비/주요설비0.png</file>
+    <file>images/주요 설비/주요설비1.png</file>
+    <file>images/주요 설비/주요설비2.png</file>
+    <file>images/주요 설비/주요설비3.png</file>
+    <file>images/주요 설비/주요설비4.png</file>
+    <file>images/주요 설비/주요설비아이콘.png</file>
+    <file>images/직업 카드/직업카드0.png</file>
+    <file>images/직업 카드/직업카드1.png</file>
+    <file>images/직업 카드/직업카드2.png</file>
+    <file>images/직업 카드/직업카드3.png</file>
+    <file>images/직업 카드/직업카드4.png</file>
+    <file>images/직업 카드/직업카드5.png</file>
+    <file>images/직업 카드/직업카드6.png</file>
+    <file>images/직업 카드/직업카드7.png</file>
+    <file>images/직업 카드/직업카드8.png</file>
+    <file>images/직업 카드/직업카드9.png</file>
+    <file>images/직업 카드/직업카드10.png</file>
+    <file>images/직업 카드/직업카드11.png</file>
     <file>images/agricola.png</file>
     <file>images/보조 설비/보조설비0.png</file>
     <file>images/직업 카드/직업카드9.png</file>
